# dsABCs

./: Algorithm.cpp  Algorithm.h  Asif.h  CMakeLists.txt  Dictionary.cpp  Dictionary.h  HeapsAlgorithm.cpp  Project3.sln  Project3.vcxproj  Project3.vcxproj.filters  README.md  Word.cpp  Word.h  main.cpp
files/: Asif.h  AssifAlg.cpp
x64/Debug/: Project3.exe.recipe  Project3.ilk  Project3.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Project3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
